--- a/source/index.html
+++ b/source/index.html
@@ -101,5 +101,257 @@
         </div>
       </div>
     </header>
+
+    <main class="main">
+      <h1 class="visually-hidden">Сервис поиска попутчиков «Погнали»</h1>
+
+      <section class="main__top-section promo">
+        <h2 class="visually-hidden">Промо-блок</h2>
+
+        <p class="promo__slogan">В путешествие с крутыми попутчиками!</p>
+
+        <div class="promo__review">
+          <p class="promo__quote">«Лучшее приложение, что я видел в жизни!»</p>
+          <p class="promo__author">Мурат Эльтазин главный редактор газеты «гаджетлайф»</p>
+        </div>
+
+        <ul class="promo__features features">
+          <li class="features__item">Выберите направление</li>
+          <li class="features__item">Изучите идеи путешественников</li>
+          <li class="features__item">Находите тех, кто похож на вас</li>
+          <li class="features__item">Путешествуйте вместе!</li>
+        </ul>
+      </section>
+
+      <section class="main__section main__section--dark about">
+        <h2 class="main__title about__title">О сервисе</h2>
+
+        <p class="about__text">Любое путешествие веселее с попутчиками, которые на одной волне с тобой! Делитесь своими идеями путешествий и черпайте вдохновение в чужих.</p>
+        <p class="about__text about__text--bold">А если найдете кого-то близкого по духу — скорее зовите в совместный трип!</p>
+
+        <a class="about__button button" href="blank.html">Подробнее</a>
+      </section>
+
+      <section class="main__section main__section--light countries">
+        <h2 class="main__title countries__title">Направления</h2>
+
+        <p class="countries__text">Мы не продаем туры и ничего не рекламируем. Люди сами пишут о странах, куда хотели бы отправиться и чем можно там заняться.</p>
+
+        <ul class="countries__list">
+          <li class="countries__item country-card">
+            <img class="country-card__image" src="img/country-photos/thailand-mobile 1.jpg" width="270" height="110" alt="Фотография зеленого тропического острова в насыщенно синей воде">
+            <img class="country-card__flag" src="img/flags/Thailand.png" width="35" height="24" alt="Флаг Таиланда">
+            <h3 class="country-card__name">Таиланд</h3>
+            <p class="country-card__slogan">Джунгли зовут!</p>
+            <p class="country-card__counter">18321</p>
+          </li>
+
+          <li class="countries__item country-card">
+            <img class="country-card__image" src="img/country-photos/france-mobile 1.jpg" width="270" height="110"
+              alt="Фотография парижской улочки, слева пятиэтажные дома, справа аллея с деревьями">
+            <img class="country-card__flag" src="img/flags/France.png" width="35" height="24" alt="Флаг Таиланда">
+            <h3 class="country-card__name">Франция</h3>
+            <p class="country-card__slogan">Трэ бьен, манифик!</p>
+            <p class="country-card__counter">12518</p>
+          </li>
+
+          <li class="countries__item country-card">
+            <img class="country-card__image" src="img/country-photos/czech-mobile 1.jpg" width="270" height="110"
+              alt="Фотография с Карловым мостом и пражской архитектурой на заднем плане, на переднем плане плывет красно-белый речной трамвай">
+            <img class="country-card__flag" src="img/flags/Czechia.png" width="35" height="24" alt="Флаг Таиланда">
+            <h3 class="country-card__name">Чехия</h3>
+            <p class="country-card__slogan">Закоулки старой Европы</p>
+            <p class="country-card__counter">5326</p>
+          </li>
+        </ul>
+
+        <a class="countries__button button" href="form.html">Показать все</a>
+      </section>
+
+      <section class="main__section main__section--dark companions">
+        <h2 class="main__title companions__title">Попутчики</h2>
+
+        <p class="companions__text">Все мы индивидуальны и у каждого свой взгляд на идеальный отдых. Одному нужен пляж и коктейль, а другому маршрут для хайкинга.</p>
+        <p class="companions__text companions__text--bold">Теперь можно легко найти единомышленников!</p>
+
+        <ul class="companions__list">
+          <li class="companions__item companion-card">
+            <img class="companion-card__avatar" src="img/avatars/tanya-firsova.jpg" width="270" height="270" alt="Аватар Тани Фирсовой: девушка в ярком купальнике плавает на спине у берега, вид сверху">
+            <h3 class="companion-card__name">Таня Фирсова</h3>
+
+            <p class="companion-card__tags companion-card__tags--centered">#ЗОЖ #ПП #Фитнес #пляж #авокадо #смузи</p>
+
+            <ul class="companion-card__flags flags-list">
+              <li class="flags-list__item">
+                <img src="img/flags/Sri Lanka.png" width="35" height="25" alt="Флаг Шри-Ланки">
+                <div class="flags-list__tooltip tooltip" aria-hidden="true">
+                  <span class="tooltip__text">Шри-Ланка</span>
+                </div>
+              </li>
+              <li class="flags-list__item">
+                <img src="img/flags/Thailand.png" width="35" height="25" alt="Флаг Таиланда">
+                <div class="flags-list__tooltip tooltip" aria-hidden="true">
+                  <span class="tooltip__text">Таиланд</span>
+                </div>
+              </li>
+              <li class="flags-list__item">
+                <img src="img/flags/Seychelles.png" width="35" height="25" alt="Флаг Сейшелл">
+                <div class="flags-list__tooltip tooltip" aria-hidden="true">
+                  <span class="tooltip__text">Сейшеллы</span>
+                </div>
+              </li>
+            </ul>
+
+            <ul class="companion-card__transport-list transport-list">
+              <li class="transport-list__item">
+                <svg class="transport-list__icon transport-list__icon--active" width="23" height="22" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Путешествия на самолёте">
+                  <path
+                    d="M18.5 1.2c-.8.2-1.6.3-1.9.8l-2.3 4.4L1.8 9.2l-.5 1.4 9.6.9-1.7 3.8-3.6.8-.9 1.5 2.6.2.3 1.2c.1.5.6.8 1 .7l1.2-.3 1.4 2.2 1-1.4-1-3.7 2.7-3.1 5 8.2 1-1L16.8 8l2.8-4c.3-.6.1-1.4 0-2.2-.2-.4-.7-.7-1-.6z"
+                    fill="#1D2E5B" />
+                </svg>
+                <div class="transport-list__tooltip tooltip" aria-hidden="true">
+                  <span class="tooltip__text">Авиаперелет</span>
+                </div>
+              </li>
+              <li class="transport-list__item">
+                <svg class="transport-list__icon" width="18" height="20" fill="none" xmlns="http://www.w3.org/2000/svg"  aria-label="Путешествия на автотранспорте">
+                  <path
+                    d="M4.5 13.57c0-.4-.15-.73-.44-1-.3-.29-.64-.43-1.06-.43-.41 0-.77.14-1.06.42-.3.28-.44.62-.44 1.01 0 .4.15.73.44 1.01.3.28.65.42 1.06.42.42 0 .77-.14 1.06-.42.3-.28.44-.61.44-1zm12 0c0-.4-.15-.73-.44-1-.3-.29-.65-.43-1.06-.43-.42 0-.77.14-1.06.42-.3.28-.44.62-.44 1.01 0 .4.14.73.44 1.01.29.28.64.42 1.06.42.41 0 .76-.14 1.06-.42.29-.28.44-.61.44-1zm-.54-4.42l-.85-4.28a.74.74 0 00-.74-.58H3.63a.74.74 0 00-.74.58l-.84 4.28c-.04.22.02.42.17.6.14.16.33.25.57.25h12.44c.23 0 .42-.09.57-.26.15-.17.2-.37.17-.59zM13.3 2.32a.5.5 0 00-.16-.38.56.56 0 00-.4-.15h-7.5a.56.56 0 00-.4.15.5.5 0 00-.16.38c0 .15.05.28.16.38.11.1.24.16.4.16h7.5c.15 0 .29-.05.4-.16a.5.5 0 00.16-.38zm4.69 8.1v6.72h-1.5v1.43c0 .4-.15.73-.44 1.01-.3.28-.65.42-1.06.42-.42 0-.77-.14-1.06-.42-.3-.28-.44-.61-.44-1v-1.44h-9v1.43c0 .4-.15.73-.44 1.01-.3.28-.64.42-1.06.42-.41 0-.77-.14-1.06-.42-.3-.28-.44-.61-.44-1v-1.44H0v-6.73c0-.83.1-1.66.3-2.49l1.2-5.06c.07-.58.45-1.1 1.14-1.53.7-.44 1.6-.77 2.7-1C6.44.11 7.66 0 9 0c1.33 0 2.55.11 3.66.33 1.1.23 2 .56 2.7 1 .69.44 1.07.95 1.14 1.53l1.23 5.06c.18.76.27 1.6.27 2.5z"
+                    fill="#1D2E5B" />
+                </svg>
+                <div class="transport-list__tooltip tooltip" aria-hidden="true">
+                  <span class="tooltip__text">Автотранспорт</span>
+                </div>
+              </li>
+              <li class="transport-list__item">
+                <svg class="transport-list__icon" width="25" height="25" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Путешествия на велосипеде">
+                  <path
+                    d="M18.95 21.88a4.5 4.5 0 110-8.99 4.5 4.5 0 010 8.98zm0-7.43a2.93 2.93 0 100 5.86 2.93 2.93 0 000-5.86zM6.05 21.88a4.5 4.5 0 110-8.99 4.5 4.5 0 010 8.98zm0-7.43a2.93 2.93 0 100 5.86 2.93 2.93 0 000-5.86zM15.63 6.25a1.56 1.56 0 001.56-1.57 1.54 1.54 0 00-2.15-1.44 1.56 1.56 0 00.59 3.01z"
+                    fill="#1D2E5B" />
+                  <path
+                    d="M17.95 9.38H15.8a.2.2 0 01-.17-.1l-1.55-2.85a1.51 1.51 0 00-2.41-.38L8.27 9.5c-.29.3-.45.69-.46 1.1 0 .85.62 1.15.9 1.32 1.4.8 2.38 1.39 2.91 1.71a.2.2 0 01.1.17v3.37c0 .43.32.79.74.8a.78.78 0 00.82-.77v-4.2a.78.78 0 00-.32-.64l-1.81-1.3a.2.2 0 01-.07-.22.2.2 0 01.04-.07l2.05-2.19a.2.2 0 01.32.04l1.06 1.93a.78.78 0 00.68.4h2.74a.78.78 0 00.78-.82.8.8 0 00-.8-.74z"
+                    fill="#1D2E5B" />
+                </svg>
+                <div class="transport-list__tooltip tooltip" aria-hidden="true">
+                  <span class="tooltip__text">Велосипед</span>
+                </div>
+              </li>
+              <li class="transport-list__item">
+                <svg class="transport-list__icon" width="22" height="24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Путешествия пешком">
+                  <path
+                    d="M15.45 6c1 0 1.82-.9 1.82-2s-.81-2-1.82-2c-1 0-1.81.9-1.81 2s.81 2 1.81 2zM14.34 10.97c.21.34.51.6.86.75.35.15.73.18 1.1.08l3.01-.83-.44-1.94-3.01.83-1.26-2.07a1.83 1.83 0 00-1.15-.85l-3.5-.77c-.4-.09-.8-.03-1.16.16-.35.2-.64.51-.82.9l-1.51 3.32 1.63.9 1.5-3.32 1.8.4L6.75 17H2.73v2h4.03a1.8 1.8 0 001.56-.97l1.74-3.2 4.7 1.04 1.65 5.45 1.72-.64-1.65-5.45c-.1-.33-.28-.63-.52-.86-.24-.24-.53-.4-.84-.46l-2.77-.61 1.61-2.96.38.63z"
+                    fill="#1D2E5B" />
+                </svg>
+                <div class="transport-list__tooltip tooltip" aria-hidden="true">
+                  <span class="tooltip__text">Пешком</span>
+                </div>
+              </li>
+            </ul>
+
+            <div class="companion-card__badge level-badge">
+              <p class="level-badge__text">
+                <span class="level-badge__number">99</span>
+                <span class="level-badge__label">level</span>
+              </p>
+              <svg class="level-badge__level-bar level-bar" id="level-bar" width="60" height="60" viewPort="0 0 100 100"
+                xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
+                <circle class="level-bar__progress" id="bar" r="28" cx="30" cy="30" fill="transparent" stroke-dasharray="270"
+                  stroke-dashoffset="105" stroke="#FF8D30" stroke-width="4" transform="rotate(-90, 30, 30)" stroke-linecap="round">
+                </circle>
+              </svg>
+            </div>
+          </li>
+
+          <li class="companions__item companion-card">
+            <img class="companion-card__avatar" src="img/avatars/petya-demin.jpg" width="270" height="270"
+              alt="Аватар Пети Демина: бородатый мужчина в шапке и темных очках на фоне снега">
+            <h3 class="companion-card__name companion-card__name--online">Петя Демин</h3>
+
+            <p class="companion-card__tags companion-card__tags--centered">#бургер #бар #футбол #концерт #крафт</p>
+
+            <ul class="companion-card__flags flags-list">
+              <li class="flags-list__item">
+                <img src="img/flags/Belgium.png" width="35" height="25" alt="Флаг Бельгии">
+                <div class="flags-list__tooltip tooltip" aria-hidden="true">
+                  <span class="tooltip__text">Бельгия</span>
+                </div>
+              </li>
+              <li class="flags-list__item">
+                <img src="img/flags/Czechia.png" width="35" height="25" alt="Флаг Чехии">
+                <div class="flags-list__tooltip tooltip" aria-hidden="true">
+                  <span class="tooltip__text">Чехия</span>
+                </div>
+              </li>
+            </ul>
+
+            <ul class="companion-card__transport-list transport-list">
+              <li class="transport-list__item">
+                <svg class="transport-list__icon transport-list__icon--active" width="23" height="22" fill="none"
+                  xmlns="http://www.w3.org/2000/svg" aria-label="Путешествия на самолёте">
+                  <path
+                    d="M18.5 1.2c-.8.2-1.6.3-1.9.8l-2.3 4.4L1.8 9.2l-.5 1.4 9.6.9-1.7 3.8-3.6.8-.9 1.5 2.6.2.3 1.2c.1.5.6.8 1 .7l1.2-.3 1.4 2.2 1-1.4-1-3.7 2.7-3.1 5 8.2 1-1L16.8 8l2.8-4c.3-.6.1-1.4 0-2.2-.2-.4-.7-.7-1-.6z"
+                    fill="#1D2E5B" />
+                </svg>
+                <div class="transport-list__tooltip tooltip" aria-hidden="true">
+                  <span class="tooltip__text">Авиаперелет</span>
+                </div>
+              </li>
+              <li class="transport-list__item">
+                <svg class="transport-list__icon transport-list__icon--active" width="18" height="20" fill="none" xmlns="http://www.w3.org/2000/svg"
+                  aria-label="Путешествия на автотранспорте">
+                  <path
+                    d="M4.5 13.57c0-.4-.15-.73-.44-1-.3-.29-.64-.43-1.06-.43-.41 0-.77.14-1.06.42-.3.28-.44.62-.44 1.01 0 .4.15.73.44 1.01.3.28.65.42 1.06.42.42 0 .77-.14 1.06-.42.3-.28.44-.61.44-1zm12 0c0-.4-.15-.73-.44-1-.3-.29-.65-.43-1.06-.43-.42 0-.77.14-1.06.42-.3.28-.44.62-.44 1.01 0 .4.14.73.44 1.01.29.28.64.42 1.06.42.41 0 .76-.14 1.06-.42.29-.28.44-.61.44-1zm-.54-4.42l-.85-4.28a.74.74 0 00-.74-.58H3.63a.74.74 0 00-.74.58l-.84 4.28c-.04.22.02.42.17.6.14.16.33.25.57.25h12.44c.23 0 .42-.09.57-.26.15-.17.2-.37.17-.59zM13.3 2.32a.5.5 0 00-.16-.38.56.56 0 00-.4-.15h-7.5a.56.56 0 00-.4.15.5.5 0 00-.16.38c0 .15.05.28.16.38.11.1.24.16.4.16h7.5c.15 0 .29-.05.4-.16a.5.5 0 00.16-.38zm4.69 8.1v6.72h-1.5v1.43c0 .4-.15.73-.44 1.01-.3.28-.65.42-1.06.42-.42 0-.77-.14-1.06-.42-.3-.28-.44-.61-.44-1v-1.44h-9v1.43c0 .4-.15.73-.44 1.01-.3.28-.64.42-1.06.42-.41 0-.77-.14-1.06-.42-.3-.28-.44-.61-.44-1v-1.44H0v-6.73c0-.83.1-1.66.3-2.49l1.2-5.06c.07-.58.45-1.1 1.14-1.53.7-.44 1.6-.77 2.7-1C6.44.11 7.66 0 9 0c1.33 0 2.55.11 3.66.33 1.1.23 2 .56 2.7 1 .69.44 1.07.95 1.14 1.53l1.23 5.06c.18.76.27 1.6.27 2.5z"
+                    fill="#1D2E5B" />
+                </svg>
+                <div class="transport-list__tooltip tooltip" aria-hidden="true">
+                  <span class="tooltip__text">Автотранспорт</span>
+                </div>
+              </li>
+              <li class="transport-list__item">
+                <svg class="transport-list__icon" width="25" height="25" fill="none" xmlns="http://www.w3.org/2000/svg"
+                  aria-label="Путешествия на велосипеде">
+                  <path
+                    d="M18.95 21.88a4.5 4.5 0 110-8.99 4.5 4.5 0 010 8.98zm0-7.43a2.93 2.93 0 100 5.86 2.93 2.93 0 000-5.86zM6.05 21.88a4.5 4.5 0 110-8.99 4.5 4.5 0 010 8.98zm0-7.43a2.93 2.93 0 100 5.86 2.93 2.93 0 000-5.86zM15.63 6.25a1.56 1.56 0 001.56-1.57 1.54 1.54 0 00-2.15-1.44 1.56 1.56 0 00.59 3.01z"
+                    fill="#1D2E5B" />
+                  <path
+                    d="M17.95 9.38H15.8a.2.2 0 01-.17-.1l-1.55-2.85a1.51 1.51 0 00-2.41-.38L8.27 9.5c-.29.3-.45.69-.46 1.1 0 .85.62 1.15.9 1.32 1.4.8 2.38 1.39 2.91 1.71a.2.2 0 01.1.17v3.37c0 .43.32.79.74.8a.78.78 0 00.82-.77v-4.2a.78.78 0 00-.32-.64l-1.81-1.3a.2.2 0 01-.07-.22.2.2 0 01.04-.07l2.05-2.19a.2.2 0 01.32.04l1.06 1.93a.78.78 0 00.68.4h2.74a.78.78 0 00.78-.82.8.8 0 00-.8-.74z"
+                    fill="#1D2E5B" />
+                </svg>
+                <div class="transport-list__tooltip tooltip" aria-hidden="true">
+                  <span class="tooltip__text">Велосипед</span>
+                </div>
+              </li>
+              <li class="transport-list__item">
+                <svg class="transport-list__icon transport-list__icon--active" width="22" height="24" fill="none" xmlns="http://www.w3.org/2000/svg"
+                  aria-label="Путешествия пешком">
+                  <path
+                    d="M15.45 6c1 0 1.82-.9 1.82-2s-.81-2-1.82-2c-1 0-1.81.9-1.81 2s.81 2 1.81 2zM14.34 10.97c.21.34.51.6.86.75.35.15.73.18 1.1.08l3.01-.83-.44-1.94-3.01.83-1.26-2.07a1.83 1.83 0 00-1.15-.85l-3.5-.77c-.4-.09-.8-.03-1.16.16-.35.2-.64.51-.82.9l-1.51 3.32 1.63.9 1.5-3.32 1.8.4L6.75 17H2.73v2h4.03a1.8 1.8 0 001.56-.97l1.74-3.2 4.7 1.04 1.65 5.45 1.72-.64-1.65-5.45c-.1-.33-.28-.63-.52-.86-.24-.24-.53-.4-.84-.46l-2.77-.61 1.61-2.96.38.63z"
+                    fill="#1D2E5B" />
+                </svg>
+                <div class="transport-list__tooltip tooltip" aria-hidden="true">
+                  <span class="tooltip__text">Пешком</span>
+                </div>
+              </li>
+            </ul>
+
+            <div class="companion-card__badge level-badge">
+              <p class="level-badge__text">
+                <span class="level-badge__number">80</span>
+                <span class="level-badge__label">level</span>
+              </p>
+              <svg class="level-badge__level-bar level-bar" id="level-bar" width="60" height="60" viewPort="0 0 100 100"
+                xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
+                <circle class="level-bar__progress" id="bar" r="28" cx="30" cy="30" fill="transparent" stroke-dasharray="270"
+                  stroke-dashoffset="125" stroke="#FF8D30" stroke-width="4" transform="rotate(-90, 30, 30)"
+                  stroke-linecap="round">
+                </circle>
+              </svg>
+            </div>
+          </li>
+        </ul>
+
+        <a class="companions__button button" href="catalog.html">Показать всех</a>
+      </section>
+    </main>
   </body>
 </html>
