Исправляет сломавшиеся пути картинок

--- a/source/index.html
+++ b/source/index.html
@@ -91,10 +91,10 @@
 
           <div class="menu__user-buttons user-buttons">
             <a class="user-buttons__item" href="tel:88005558628" aria-label="Позвонить нам">
-              <img class="user-buttons__icon" src="img/icon_call.svg" width="18" height="18" alt="Иконка звонящей трубки">
+              <img class="user-buttons__icon" src="img/icons/icon_call.svg" width="18" height="18" alt="Иконка звонящей трубки">
             </a>
             <a class="user-buttons__item" href="mailto:mail@htmlacademy.ru" aria-label="Написать нам">
-              <img class="user-buttons__icon" src="img/icon_mail.svg" width="18" height="16" alt="Иконка конверта">
+              <img class="user-buttons__icon" src="img/icons/icon_mail.svg" width="18" height="16" alt="Иконка конверта">
             </a>
             <a class="user-buttons__item button" href="blank.html">Авторизация</a>
           </div>
