--- a/source/index.html
+++ b/source/index.html
@@ -352,6 +352,69 @@
 
         <a class="companions__button button" href="catalog.html">Показать всех</a>
       </section>
+
+      <section class="main__section main__section--light rates">
+        <h2 class="main__title rates__title">Добавьте свой профиль</h2>
+
+        <table class="rates__table">
+          <tr class="rates__table-row">
+            <td class="rates__feature">Базовое размещение</td>
+            <td class="rates__cost">Бесплатно</td>
+          </tr>
+          <tr class="rates__table-row">
+            <td class="rates__feature">Вывод на первых позициях</td>
+            <td class="rates__cost">99 руб./мес</td>
+          </tr>
+          <tr class="rates__table-row">
+            <td class="rates__feature">Кастомный цвет карточки</td>
+            <td class="rates__cost">59 руб./мес</td>
+          </tr>
+        </table>
+
+        <a class="rates__link" href="blank.html"><span class="rates__icon-container"><img class="rates__icon" src="img/icons/icon_businessman.svg" width="26" height="26" alt="Иконка бизнесмена" aria-hidden="true"></span> Показать тарифы для бизнеса</a>
+      </section>
+
+      <section class="main__section main__section--dark feedback">
+        <h2 class="main__title feedback__title">Заинтересовались?</h2>
+        <p class="feedback__text">Зарегистрируйтесь, это быстро и бесплатно! Уже зарегистрированы? Тогда скорее <a class="feedback__login-link" href="blank.html">авторизуйтесь</a>.</p>
+
+        <form class="feedback__form feedback-form" method="POST" action="https://echo.htmlacademy.ru/">
+          <label class="visually-hidden" for="feedback-email">Ваш e-mail:</label>
+          <input class="feedback-form__input" type="email" id="feedback-email" name="email" placeholder="E-mail">
+          <button class="feedback-from__button button" type="submit" aria-label="Регистрация">
+            <span class="button__text">Регистрация</span>
+          </button>
+        </form>
+
+        <p class="feedback__text">Остались вопросы? Мы с радостью на них ответим!</p>
+
+        <ul class="feedback__contacts contacts">
+          <li class="contacts__item">
+            <a class="contacts__phone" href="tel:88005558628">
+              <svg width="90" height="90" viewBox="0 0 90 90" fill="none" xmlns="http://www.w3.org/2000/svg" role="img"
+                aria-hidden="true" focusable="false">
+                <circle cx="45" cy="45" r="45" fill="#121936" />
+                <path class="contacts__icon" fill-rule="evenodd" clip-rule="evenodd"
+                  d="M45 30.2c-5.6 0-11.2 1-13.2 2.8-1.7 1.6-2.3 4.3-2.5 6v.3c0 .7.6 1.3 1.3 1.3l5.1-.4h.2c.7 0 1.3-.6 1.3-1.3v-2.4c0-.8.6-1.4 1.4-1.4h12.8c.8 0 1.4.6 1.4 1.4v2.4c0 .7.6 1.2 1.3 1.2h.2l5 .5c.8 0 1.4-.6 1.4-1.3v-.2c-.2-1.8-.8-4.5-2.5-6.1-2-1.9-7.6-2.8-13.2-2.8zm0 16a2.5 2.5 0 00-2.6 2.5c0 1.4 1.2 2.5 2.6 2.5 1.4 0 2.6-1.1 2.6-2.5s-1.2-2.5-2.6-2.5zm-2-5.5V39c0-.8-.7-1.5-1.6-1.5-.9 0-1.6.7-1.6 1.5v1.6l-8.9 8.9a3 3 0 00-1 2.2v2.5c0 1.3 1.2 2.4 2.7 2.4h.6v1.6c0 .8.8 1.5 1.7 1.5.9 0 1.6-.7 1.6-1.5v-1.6h17v1.6c0 .8.7 1.5 1.6 1.5 1 0 1.7-.7 1.7-1.5v-1.6h.6c1.5 0 2.6-1 2.6-2.4v-2.5a3 3 0 00-1-2.2l-8.8-9v-1.5c0-.8-.7-1.5-1.6-1.5-.9 0-1.6.7-1.6 1.5v1.6h-4zm2 3a5 5 0 015.2 5 5 5 0 01-5.2 5 5 5 0 01-5.2-5 5 5 0 015.2-5z"
+                  fill="#FFD74B" />
+              </svg>
+              <span class="contacts__text">8 800 555-86-28</span>
+            </a>
+          </li>
+          <li class="contacts__item">
+            <a class="contacts__email" href="mailto:mail@htmlacademy.ru">
+              <svg width="90" height="90" viewBox="0 0 90 90" fill="none" xmlns="http://www.w3.org/2000/svg" role="img"
+                aria-hidden="true" focusable="false">
+                <circle cx="45" cy="45" r="45" fill="#121936" />
+                <path class="contacts__icon" fill-rule="evenodd" clip-rule="evenodd"
+                  d="M60.3 55l-8.7-8 8.7-8-1.2-1.2-12.6 11.5-12.6-11.5-1.2 1.3 8.7 7.9-8.7 8 1.2 1.2 8.8-8 3.8 3.5 3.8-3.5 8.8 8 1.2-1.3zM31.2 34.4c-1.7 0-3 1.4-3 3.1v18.8c0 1.7 1.3 3.1 3 3.1h30.6c1.7 0 3-1.4 3-3.1V37.6c0-1.7-1.3-3.1-3-3.1H31.2z"
+                  fill="#FFD74B" />
+              </svg>
+              <span class="contacts__text">mail@htmlacademy.ru</span>
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
