Добавляет секцию с картой

--- a/source/index.html
+++ b/source/index.html
@@ -415,6 +415,20 @@
           </li>
         </ul>
       </section>
+
+      <section class="main__section main__section--special address">
+        <h2 class="visually-hidden">Как нас найти</h2>
+
+        <div class="address__container">
+          <p class="address__address">ул. Большая Конюшенная, 19/8</p>
+          <a class="address__button button button--outline" href="https://yandex.ru/maps/2/saint-petersburg/?ll=30.340477%2C59.933208&mode=routes&rtext=59.931032%2C30.362029~59.938635%2C30.323118&rtt=auto&ruri=~ymapsbm1%3A%2F%2Fgeo%3Fll%3D30.323%252C59.939%26spn%3D0.001%252C0.001%26text%3D%25D0%25A0%25D0%25BE%25D1%2581%25D1%2581%25D0%25B8%25D1%258F%252C%2520%25D0%25A1%25D0%25B0%25D0%25BD%25D0%25BA%25D1%2582-%25D0%259F%25D0%25B5%25D1%2582%25D0%25B5%25D1%2580%25D0%25B1%25D1%2583%25D1%2580%25D0%25B3%252C%2520%25D0%2591%25D0%25BE%25D0%25BB%25D1%258C%25D1%2588%25D0%25B0%25D1%258F%2520%25D0%259A%25D0%25BE%25D0%25BD%25D1%258E%25D1%2588%25D0%25B5%25D0%25BD%25D0%25BD%25D0%25B0%25D1%258F%2520%25D1%2583%25D0%25BB%25D0%25B8%25D1%2586%25D0%25B0%252C%252019%252F8&z=13.45">Проложить маршрут</a>
+        </div>
+
+        <div class="address__map-container">
+          <iframe src="https://yandex.ru/map-widget/v1/-/CCUUyBHoXC" width="1440" height="584"
+            allowfullscreen title="Офис компании «Погнали» расположен по адресу г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8"></iframe>
+        </div>
+      </section>
     </main>
   </body>
 </html>
