Удаляет пробелы из названий файлов картинок

--- a/source/index.html
+++ b/source/index.html
@@ -139,7 +139,7 @@
 
         <ul class="countries__list">
           <li class="countries__item country-card">
-            <img class="country-card__image" src="img/country-photos/thailand-mobile 1.jpg" width="270" height="110" alt="Фотография зеленого тропического острова в насыщенно синей воде">
+            <img class="country-card__image" src="img/country-photos/thailand-mobile.jpg" width="270" height="110" alt="Фотография зеленого тропического острова в насыщенно синей воде">
             <img class="country-card__flag" src="img/flags/Thailand.png" width="35" height="24" alt="Флаг Таиланда">
             <h3 class="country-card__name">Таиланд</h3>
             <p class="country-card__slogan">Джунгли зовут!</p>
@@ -147,7 +147,7 @@
           </li>
 
           <li class="countries__item country-card">
-            <img class="country-card__image" src="img/country-photos/france-mobile 1.jpg" width="270" height="110"
+            <img class="country-card__image" src="img/country-photos/france-mobile.jpg" width="270" height="110"
               alt="Фотография парижской улочки, слева пятиэтажные дома, справа аллея с деревьями">
             <img class="country-card__flag" src="img/flags/France.png" width="35" height="24" alt="Флаг Таиланда">
             <h3 class="country-card__name">Франция</h3>
@@ -156,7 +156,7 @@
           </li>
 
           <li class="countries__item country-card">
-            <img class="country-card__image" src="img/country-photos/czech-mobile 1.jpg" width="270" height="110"
+            <img class="country-card__image" src="img/country-photos/czech-mobile.jpg" width="270" height="110"
               alt="Фотография с Карловым мостом и пражской архитектурой на заднем плане, на переднем плане плывет красно-белый речной трамвай">
             <img class="country-card__flag" src="img/flags/Czechia.png" width="35" height="24" alt="Флаг Таиланда">
             <h3 class="country-card__name">Чехия</h3>
@@ -183,7 +183,7 @@
 
             <ul class="companion-card__flags flags-list">
               <li class="flags-list__item">
-                <img src="img/flags/Sri Lanka.png" width="35" height="25" alt="Флаг Шри-Ланки">
+                <img src="img/flags/Sri-Lanka.png" width="35" height="25" alt="Флаг Шри-Ланки">
                 <div class="flags-list__tooltip tooltip" aria-hidden="true">
                   <span class="tooltip__text">Шри-Ланка</span>
                 </div>
