--- a/source/index.html
+++ b/source/index.html
@@ -253,9 +253,8 @@
                 <span class="level-badge__number">99</span>
                 <span class="level-badge__label">level</span>
               </p>
-              <svg class="level-badge__level-bar level-bar" id="level-bar" width="60" height="60" viewPort="0 0 100 100"
-                xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
-                <circle class="level-bar__progress" id="bar" r="28" cx="30" cy="30" fill="transparent" stroke-dasharray="270"
+              <svg class="level-badge__level-bar level-bar" width="60" height="60" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
+                <circle class="level-bar__progress" r="28" cx="30" cy="30" fill="transparent" stroke-dasharray="270"
                   stroke-dashoffset="105" stroke="#FF8D30" stroke-width="4" transform="rotate(-90, 30, 30)" stroke-linecap="round">
                 </circle>
               </svg>
@@ -339,9 +338,8 @@
                 <span class="level-badge__number">80</span>
                 <span class="level-badge__label">level</span>
               </p>
-              <svg class="level-badge__level-bar level-bar" id="level-bar" width="60" height="60" viewPort="0 0 100 100"
-                xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
-                <circle class="level-bar__progress" id="bar" r="28" cx="30" cy="30" fill="transparent" stroke-dasharray="270"
+              <svg class="level-badge__level-bar level-bar" width="60" height="60" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
+                <circle class="level-bar__progress" r="28" cx="30" cy="30" fill="transparent" stroke-dasharray="270"
                   stroke-dashoffset="125" stroke="#FF8D30" stroke-width="4" transform="rotate(-90, 30, 30)"
                   stroke-linecap="round">
                 </circle>
