--- a/source/index.html
+++ b/source/index.html
@@ -354,18 +354,18 @@
       <section class="main__section main__section--light rates">
         <h2 class="main__title rates__title">Добавьте свой профиль</h2>
 
-        <table class="rates__table">
-          <tr class="rates__table-row">
-            <td class="rates__feature">Базовое размещение</td>
-            <td class="rates__cost">Бесплатно</td>
+        <table class="rates__table table">
+          <tr class="table__row table__row--counter">
+            <td class="table__feature">Базовое размещение</td>
+            <td class="table__cost">Бесплатно</td>
           </tr>
-          <tr class="rates__table-row">
-            <td class="rates__feature">Вывод на первых позициях</td>
-            <td class="rates__cost">99 руб./мес</td>
+          <tr class="table__row table__row--counter">
+            <td class="table__feature">Вывод на первых позициях</td>
+            <td class="table__cost">99 руб./мес</td>
           </tr>
-          <tr class="rates__table-row">
-            <td class="rates__feature">Кастомный цвет карточки</td>
-            <td class="rates__cost">59 руб./мес</td>
+          <tr class="table__row table__row--counter">
+            <td class="table__feature">Кастомный цвет карточки</td>
+            <td class="table__cost">59 руб./мес</td>
           </tr>
         </table>
 
@@ -477,5 +477,30 @@
         </a>
       </p>
     </footer>
+
+    <div class="modal">
+      <h3 class="modal__title">Бизнес-тарифы</h3>
+
+      <table class="modal__table table">
+        <tr class="table__row">
+          <td class="table__feature">Реклама у блоггера</td>
+          <td class="table__cost">300 000 руб./пост</td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__feature">Накрутка подписчиков</td>
+          <td class="table__cost">от 1 руб./шт.</td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__feature">Лайки от ботов</td>
+          <td class="table__cost">от 20 коп./лайк</td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__feature">Ваш продакт-плейсмент</td>
+          <td class="table__cost">Индивидуально</td>
+        </tr>
+      </table>
+
+      <button class="modal__button-close" type="button">Закрыть окно</button>
+    </div>
   </body>
 </html>
