Добавляет белый логотип в шапку

--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,8 @@
     <header class="page-header">
       <div class="page-header__top-bar top-bar">
         <a class="top-bar__logo logo" href="index.html" aria-label="Перейти на главную страницу">
-          <img src="img/logo_mobile_blue.png" width="96" height="15" alt="Логотип сервиса поиска попутчиков «Погнали»">
+          <img class="logo__image--blue" src="img/logo_mobile_blue.png" width="96" height="15" alt="Логотип сервиса поиска попутчиков «Погнали»">
+          <img class="logo__image--white" src="img/logo_mobile_white.png" width="96" height="15" alt="Логотип сервиса поиска попутчиков «Погнали»">
         </a>
 
         <div class="top-bar__menu menu">
