Исправляет классы секций и заголовков секций на главной

--- a/source/index.html
+++ b/source/index.html
@@ -105,7 +105,7 @@
     <main class="page-main">
       <h1 class="visually-hidden">Сервис поиска попутчиков «Погнали»</h1>
 
-      <section class="main__section main__section--top promo">
+      <section class="page-main__section page-main__section--top promo">
         <h2 class="visually-hidden">Промо-блок</h2>
 
         <p class="promo__slogan">В путешествие с крутыми попутчиками!</p>
@@ -123,8 +123,8 @@
         </ul>
       </section>
 
-      <section class="main__section main__section--dark about">
-        <h2 class="main__title about__title">О сервисе</h2>
+      <section class="page-main__section page-main__section--dark about">
+        <h2 class="page-main__title page-main__title--orange about__title">О сервисе</h2>
 
         <p class="about__text">Любое путешествие веселее с попутчиками, которые на одной волне с тобой! Делитесь своими идеями путешествий и черпайте вдохновение в чужих.</p>
         <p class="about__text about__text--bold">А если найдете кого-то близкого по духу — скорее зовите в совместный трип!</p>
@@ -132,8 +132,8 @@
         <a class="about__button button" href="blank.html">Подробнее</a>
       </section>
 
-      <section class="main__section main__section--light countries">
-        <h2 class="main__title countries__title">Направления</h2>
+      <section class="page-main__section page-main__section--light countries">
+        <h2 class="page-main__title page-main__title--orange countries__title">Направления</h2>
 
         <p class="countries__text">Мы не продаем туры и ничего не рекламируем. Люди сами пишут о странах, куда хотели бы отправиться и чем можно там заняться.</p>
 
@@ -168,8 +168,8 @@
         <a class="countries__button button" href="form.html">Показать все</a>
       </section>
 
-      <section class="main__section main__section--dark companions">
-        <h2 class="main__title companions__title">Попутчики</h2>
+      <section class="page-main__section page-main__section--dark companions">
+        <h2 class="page-main__title page-main__title--orange companions__title">Попутчики</h2>
 
         <p class="companions__text">Все мы индивидуальны и у каждого свой взгляд на идеальный отдых. Одному нужен пляж и коктейль, а другому маршрут для хайкинга.</p>
         <p class="companions__text companions__text--bold">Теперь можно легко найти единомышленников!</p>
@@ -351,8 +351,8 @@
         <a class="companions__button button" href="catalog.html">Показать всех</a>
       </section>
 
-      <section class="main__section main__section--light rates">
-        <h2 class="main__title rates__title">Добавьте свой профиль</h2>
+      <section class="page-main__section page-main__section--light rates">
+        <h2 class="page-main__title page-main__title--orange rates__title">Добавьте свой профиль</h2>
 
         <table class="rates__table table">
           <tr class="table__row table__row--counter">
@@ -372,8 +372,8 @@
         <a class="rates__link" href="blank.html"><span class="rates__icon-container"><img class="rates__icon" src="img/icons/icon_businessman.svg" width="26" height="26" alt="Иконка бизнесмена" aria-hidden="true"></span> Показать тарифы для бизнеса</a>
       </section>
 
-      <section class="main__section main__section--dark feedback">
-        <h2 class="main__title feedback__title">Заинтересовались?</h2>
+      <section class="page-main__section page-main__section--dark feedback">
+        <h2 class="page-main__title page-main__title--orange feedback__title">Заинтересовались?</h2>
         <p class="feedback__text">Зарегистрируйтесь, это быстро и бесплатно! Уже зарегистрированы? Тогда скорее <a class="feedback__login-link" href="blank.html">авторизуйтесь</a>.</p>
 
         <form class="feedback__form feedback-form" method="POST" action="https://echo.htmlacademy.ru/">
@@ -414,7 +414,7 @@
         </ul>
       </section>
 
-      <section class="main__section main__section--special address">
+      <section class="page-main__section page-main__section--special address">
         <h2 class="visually-hidden">Как нас найти</h2>
 
         <div class="address__container">
