Размечает список планов

--- a/source/form.html
+++ b/source/form.html
@@ -108,7 +108,7 @@
       </div>
     </header>
 
-    <main class="page-main">
+    <main class="page-main page-main--inner">
       <div class="page-main__title-container">
         <h1 class="page-main__title">Направления</h1>
       </div>
@@ -177,6 +177,26 @@
             </fieldset>
           </form>
         </div>
+      </section>
+
+      <section class="page-main__section plans">
+        <h2 class="page-main__title plans__title">Мои планы:</h2>
+
+        <ol class="plans__list plans-list">
+          <li class="plans-list__item">
+            <h3 class="plans-list__title">Франция, Италия</h3>
+            <p class="plans-list__details plans-list__details--companions">3 попутчика</p>
+            <p class="plans-list__details plans-list__details--dates">26 мар — 29 мар</p>
+            <a class="plans-list__edit" href="blank.html">Изменить</a>
+          </li>
+
+          <li class="plans-list__item">
+            <h3 class="plans-list__title">Таиланд, Индонезия</h3>
+            <p class="plans-list__details plans-list__details--companions">1 попутчик</p>
+            <p class="plans-list__details plans-list__details--dates">1 июл — 15 июл</p>
+            <a class="plans-list__edit" href="blank.html">Изменить</a>
+          </li>
+        </ol>
       </section>
     </main>
 
